      (CNY-2127)
    * A regression introduced in 1.2.1 affecting patch files that apply
      multiple changes to the same file has been fixed.  (CNY-2141)
    * Group scripts now have file descriptor 0 (stdin) connected to
      /dev/null. Previously, stdin was closed, a potential problem
      for scripts that open file descriptors and then disconnect from
      the terminal. (CNY-2143)

Changes in 1.2.2:
  o Build Changes:
    * Python and Ruby dependencies with lib-specific flags now cause
      the package to be architecture-flavored. (CNY-2110)
    * Groups using setSearchPath now prefer packages on the labels and
      troves listed explicitly in the searchPath over other labels,
      even if the label is specified in the add() command. For example,
      if your searchPath includes foo=conary.rpath.com@rpl:1/1-1-1, then
      r.add('foo', 'conary.rpath.com@rpl:1') in a group recipe will now
      find version 1-1-1 over later versions. Before, it would find the
      latest version in the repository if you specified the label in the
      r.add() command. (CNY-1993)

  o Client Changes:
    * The conary command line now accepts 'rb' as an alias for
      'rollback'.
    * The output of 'rblist' now combines packages and their components
      in a single line (similar to the output of 'update'). (CNY-2134)

  o Bug Fixes:
    * When parsing the GPG keyring, PGP version 2 keys are now ignored.
      (CNY-2115)
    * Direct key signatures for PGP keys are now accepted. (CNY-2120)
    * Source control recipe actions such as addMercurialSnapshot()
      no longer produce directory names that can collide with
      a trove with the same name on a different label, producing
      a snapshot of a different source control repository. (CNY-2124)
    * Tag scripts are now closing file descriptors larger than 2
      before calling a function from the exec family. (CNY-2114)
    * A bug in determining the correct version for packages when